--- a/udacity_eda_mdolder.rmd
+++ b/udacity_eda_mdolder.rmd
@@ -1,3 +1,12 @@
+---
+title: "Prosper Loan Analysis"
+author: Matthew Dolder
+date: May 30, 2021
+output:
+  md_document:
+    variant: markdown_github
+---
+
 Prosper Loan Analysis by Matthew Dolder
 ========================================================
 
